--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <button>modelos</button>
         </div>
     </header>
-    
+   <!--Texto--> 
     <div class="somos">
         <h1>Oque somos?</h1>
         <p>Na Twoak Company, criamos soluções digitais personalizadas para pequenas empresas e negócios locais. Desenvolvemos sites profissionais e sistemas de gestão eficientes, como controle de estoque, agendamento e comandas.
@@ -27,7 +27,7 @@
 Nosso objetivo é facilitar o dia a dia do empreendedor com tecnologia simples e acessível, para que você possa focar no crescimento do seu negócio.
 </p>
     </div>
-
+<!--CARROSEL DE PROJETOS-->
     <div class="carrossel">
   <div class="carrossel-container">
     <div class="slide ativo">
@@ -49,6 +49,7 @@ Nosso objetivo é facilitar o dia a dia do empreendedor com tecnologia simples e
   </div>
 </div>
 
+<!--tecnologias usadas-->
 <div class="tecnologia">
   <h2>TECNOLOGIAS</h2>
   <div class="icones">
@@ -67,6 +68,7 @@ Nosso objetivo é facilitar o dia a dia do empreendedor com tecnologia simples e
   </div>
 </div>
 
+   <!--Texto--> 
 <div class="somos">
   <h1>Vai um sistema ae?</h1>
   <p>"Os valores apresentados são apenas estimativas médias. Para um orçamento personalizado, entre em contato conosco — teremos o prazer de atendê-lo sem compromisso!"
@@ -74,12 +76,13 @@ Nosso objetivo é facilitar o dia a dia do empreendedor com tecnologia simples e
   </p>
 </div>
 
+<!--PREÇOS-->
 <div class="cards-container">
   <div class="card">
     <img src="imagens/sites.jpg" alt="Petshop">
-    <h3>Sites Online</h3>
+    <h3>Sites Online Empresarial</h3>
     <p>Crie uma presença online profissional para seu estabelecimento.</p>
-    <a href="#">R$249,99+</a>
+    <a href="#">R$499,99+</a>
   </div>
 
   <div class="card">
@@ -94,6 +97,20 @@ Nosso objetivo é facilitar o dia a dia do empreendedor com tecnologia simples e
     <h3>Sistema de Estoque</h3>
     <p>Controle suas entradas e saídas de produtos com facilidade.</p>
     <a href="#">R$399,99+</a>
+  </div>
+
+  <div class="card">
+    <img src="imagens/" alt="portifolio">
+    <h3>Portifólio Profissional</h3>
+    <p>Impressione os demais com seu incrivel portifólio personalizado a sua cara.</p>
+    <a href="#">R$119,99+</a>
+  </div>
+
+  <div class="card">
+    <img src="imagens/" alt="automatizacao">
+    <h3>Automatização de tarefas</h3>
+    <p>Acabe com a perde de tempo.</p>
+    <a href="#">R$249,99+</a>
   </div>
 </div>
 
