--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet"  href="style.css">
-    <link rel="icon" type="img" href="imagens/logo.png">
+    <link rel="icon" type="img" href="imagens/vectorlogo/logo.png">
     <title>Twoak Company</title>
 </head>
 <body>
     <!--Cabeçalho-->
     <header>
         <div class="logo">
-            <img src="imagens/logo.png" alt="logoTwoak">
+            <img src="imagens/vectorlogo/logo.png" alt="logoTwoak">
         </div>
         <div class="funcionalidades">
             <button>como funciona</button>
@@ -26,27 +26,6 @@
 
 Nosso objetivo é facilitar o dia a dia do empreendedor com tecnologia simples e acessível, para que você possa focar no crescimento do seu negócio.
 </p>
-    </div>
-<!--CARROSEL DE PROJETOS-->
-    <div class="carrossel">
-  <div class="carrossel-container">
-    <div class="slide ativo">
-      <img src="imagens/barbearia.png" alt="Modelo 1">
-      <p>Modelo de site para barbearia</p>
-    </div>
-    <div class="slide">
-      <img src="imagens/estoque.png" alt="Modelo 2">
-      <p>Sistema de controle de estoque</p>
-    </div>
-    <div class="slide">
-      <img src="imagens/sites.jpg" alt="Modelo 3">
-      <p>Sites online</p>
-    </div>
-  </div>
-  <div class="botoes-carrossel">
-    <button onclick="mudarSlide(-1)">❮</button>
-    <button onclick="mudarSlide(1)">❯</button>
-  </div>
 </div>
 
 <!--tecnologias usadas-->
@@ -54,16 +33,19 @@ Nosso objetivo é facilitar o dia a dia do empreendedor com tecnologia simples e
   <h2>TECNOLOGIAS</h2>
   <div class="icones">
     <div class="icone" id="python">
-      <img src="imagens/python.png" alt="Python">
+      <img src="imagens/tec/python.png" alt="Python">
     </div>
     <div class="icone" id="php">
-      <img src="imagens/php.png" alt="PHP">
+      <img src="imagens/tec/php.png" alt="PHP">
     </div>
     <div class="icone" id="web3">
-      <img src="imagens/web3.png" alt="Web3">
+      <img src="imagens/tec/web3.png" alt="Web3">
     </div>
     <div class="icone" id="MySQL">
-      <img src="imagens/mysql.png" alt="MySQL">
+      <img src="imagens/tec/mysql.png" alt="MySQL">
+    </div>
+    <div class="icone" id="react">
+      <img src="imagens/tec/react.png" alt="react">
     </div>
   </div>
 </div>
@@ -76,46 +58,73 @@ Nosso objetivo é facilitar o dia a dia do empreendedor com tecnologia simples e
   </p>
 </div>
 
-<!--PREÇOS-->
+<!--PREÇOS de projetos-->
 <div class="cards-container">
   <div class="card">
-    <img src="imagens/sites.jpg" alt="Petshop">
+    <img src="imagens/samples/sites.jpg" alt="Petshop">
     <h3>Sites Online Empresarial</h3>
     <p>Crie uma presença online profissional para seu estabelecimento.</p>
     <a href="#">R$499,99+</a>
   </div>
 
   <div class="card">
-    <img src="imagens/cardapio.jpg" alt="Cardapio">
+    <img src="imagens/samples/cardapio.jpg" alt="Cardapio">
     <h3>Cardapio Online + QrCode</h3>
     <p>Mostre tudo que a de bom com apenas um QrCode.</p>
     <a href="#">R$149,99</a>
   </div>
 
   <div class="card">
-    <img src="imagens/estoque.png" alt="Controle de Estoque">
+    <img src="imagens/samples/estoque.jpg" alt="Controle de Estoque">
     <h3>Sistema de Estoque</h3>
     <p>Controle suas entradas e saídas de produtos com facilidade.</p>
     <a href="#">R$399,99+</a>
   </div>
 
   <div class="card">
-    <img src="imagens/" alt="portifolio">
+    <img src="imagens/samples/portifolio.webp" alt="portifolio">
     <h3>Portifólio Profissional</h3>
     <p>Impressione os demais com seu incrivel portifólio personalizado a sua cara.</p>
     <a href="#">R$119,99+</a>
   </div>
 
   <div class="card">
-    <img src="imagens/" alt="automatizacao">
+    <img src="imagens/samples/automatização.webp" alt="automatizacao">
     <h3>Automatização de tarefas</h3>
     <p>Acabe com a perde de tempo.</p>
     <a href="#">R$249,99+</a>
   </div>
 </div>
 
+<!--Oque tem em cada projeto(caixa de texto invertida de cores) -->
 
 
+<!--CARROSEL DE PROJETOS(Adicionar projetos reais fazer troca mas pra frente)-->
+    <div class="carrossel">
+  <div class="carrossel-container">
+    <div class="slide ativo">
+      <img src="imagens/samples/barbearia.png" alt="Modelo 1">
+      <p>Modelo de site para barbearia</p>
+    </div>
+    <div class="slide">
+      <img src="imagens/samples/cardapio.jpg" alt="Modelo 2">
+      <p>Entre no seu comércio com facilidade e tecnologia</p>
+    </div>
+    <div class="slide">
+      <img src="imagens/samples/sites.jpg" alt="Modelo 3">
+      <p>Sites online</p>
+    </div>
+  </div>
+  <div class="botoes-carrossel">
+    <button onclick="mudarSlide(-1)">❮</button>
+    <button onclick="mudarSlide(1)">❯</button>
+  </div>
+</div>
+
+<!--Nossos Portifólios e apresentação-->
+
+
+<!--Rodapé-->
 
 <script src="script.js"></script>
 </body>
