--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
     <!--PREÇO DOS PROJETOS-->
     <div class="cards-container">
-        <div class="card">
+        <div class="card" id="link-cards">
           <img src="imagens/samples/sites.jpg" alt="Petshop">
           <h3>Sites Online Empresarial</h3>
           <p>Crie uma presença online profissional para seu estabelecimento.</p>
@@ -217,25 +217,29 @@
 
 
     <!--Nossos Portifólios e apresentação-->
- <div class="somos">
-  <div class="cards-container">
-    <div class="card">
-      <h1 id="nomes">Luan</h1>
-      <img src="imagens/Luanicon.jpg" alt="icon" class="icon">
-      <h3>Desenvolvedor Full-Stack</h3>
-      <p></p>
-      <a href="#">Portfólio</a>
-    </div>
+    <div class="somos">
+      <div class="cards-container">
 
-    <div class="card">
-      <h1 id="nomes">Leonardo</h1>
-      <img src="" alt="icon" class="icon">
-      <h3>Desenvolvedor Full-Stack</h3>
-      <p></p>
-      <a href="#">Portfólio</a>
+        <h1>Integrantes do projeto</h1>
+
+        <div class="card">
+          <h1 id="nomes">Luan</h1>
+          <img src="imagens/Luanicon.jpg" alt="icon" class="icon">
+          <h3>Desenvolvedor Full-Stack</h3>
+          <p></p>
+          <a href="#">Portfólio</a>
+        </div>
+
+        <div class="card">
+          <h1 id="nomes">Leonardo</h1>
+          <img src="imagens/leoIcon.png" alt="icon" class="icon">
+          <h3>Desenvolvedor Full-Stack</h3>
+          <p></p>
+          <a href="#">Portfólio</a>
+        </div>
+
+      </div>
     </div>
-  </div>
-</div>
 
 
      <!--tecnologias usadas-->
