--- a/portifolio/portifolioLeo.html
+++ b/portifolio/portifolioLeo.html
@@ -33,23 +33,28 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae deleniti magni perferendis debitis beatae quod nobis! Nam fugiat, aspernatur tempore repudiandae fuga aut ratione, tenetur incidunt nisi voluptatum itaque eaque!</p>
         <h4>Areas:</h4>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae deleniti magni perferendis debitis beatae quod nobis! Nam fugiat, aspernatur tempore repudiandae fuga aut ratione, tenetur incidunt nisi voluptatum itaque eaque!</p>
-
-        <div class="icones" id="iconesPortifolio">
-          <div class="icone">
-            <img src="/imagens/tec/php.png" alt="HTML5">
-            <p>HTML5</p>
-          </div>
-          <div class="icone">
-            <img src="/imagens/tec/php.png" alt="CSS3">
-            <p>CSS3</p>
-          </div>
-          <div class="icone">
-            <img src="/imagens/tec/php.png" alt="JavaScript">
-            <p>JavaScript</p>
-          </div>
-        </div>
-
     </section>
+
+<!-- <section class="divPortifolio">
+  <div>
+    <h1>Habilidades Técnicas</h1>
+    <ul class="lista-tecnologias">
+      <li>
+        <img src="/imagens/tec/react.png" alt="React" class="icon" />
+        <p>React</p>
+      </li>
+      <li>
+        <img src="/imagens/tec/react.png" alt="React" class="icon" />
+        <p>React</p>
+      </li>
+      <li>
+        <img src="/imagens/tec/react.png" alt="React" class="icon" />
+        <p>React</p>
+      </li>
+    </ul>
+  </div>
+</section> -->
+
 
 
     <section class="divPortifolio">
