--- a/portifolio/portifolioLeo.html
+++ b/portifolio/portifolioLeo.html
@@ -30,38 +30,56 @@
         <h1>Leonardo Machado arroyo</h1>
         <h3>Integrante Full-Stack</h1>
         <h4>Sobre mim</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae deleniti magni perferendis debitis beatae quod nobis! Nam fugiat, aspernatur tempore repudiandae fuga aut ratione, tenetur incidunt nisi voluptatum itaque eaque!</p>
-        <h4>Areas:</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae deleniti magni perferendis debitis beatae quod nobis! Nam fugiat, aspernatur tempore repudiandae fuga aut ratione, tenetur incidunt nisi voluptatum itaque eaque!</p>
+        <p>Sou estudante com 17 anos ainda, porem tenho grande vontade de se inserir no mercado de back-end com força! Tenho habilidades tecnicas em linguagens atuais e outras que.</p>
+        <h4>React Native</h4>
+        <p>Aprendi nossões basicas do uso de typeScript para aplicarmos em meu TCC por mais de 1 ano.</p>
+        <h4>Html, Css e Javascript</h4>
+        <p>Estudei por minha parte por meses porem ainda falta amadurecimento.</p>
+        <h4>PHP</h4>
+        <p>Compreendi os conceitos de forma basica e seus uso com conexões e bancos de dados.</p>
     </section>
 
-<!-- <section class="divPortifolio">
-  <div>
-    <h1>Habilidades Técnicas</h1>
-    <ul class="lista-tecnologias">
-      <li>
-        <img src="/imagens/tec/react.png" alt="React" class="icon" />
-        <p>React</p>
-      </li>
-      <li>
-        <img src="/imagens/tec/react.png" alt="React" class="icon" />
-        <p>React</p>
-      </li>
-      <li>
-        <img src="/imagens/tec/react.png" alt="React" class="icon" />
-        <p>React</p>
-      </li>
-    </ul>
-  </div>
-</section> -->
+    <section class="area-projetos">
+        <h1 class="area-projetos-titulo">Projetos</h1>
+        <div class="lista-projetos">
+
+          <div class="cartao-projeto">
+            <h3>Go 2 Work</h3>
+            <p>Aplicativo de busca de emprego focalizado para pequenos negocios e jovens que acabaram de sair do ensino medio. Desenvolvido pela minha equipe Thinking Light como TCC de Etec.</p>
+            <img src="/imagens/prints/fotoGo2Work.jpg" id="print">
+            <p>Link do codigo fonte: <a href="https://github.com/Thinking-Light-2025/Go-2-Work" style="color: #28a745; text-decoration: none;">Github</a> <br>
+            <p>Baixar projeto: <a href="" style="color: #28a745; text-decoration: none;">Clique aqui!</a></p>
+          </div>
+          <div class="cartao-projeto">
+            <h3>Projeto 2</h3>
+            <p>Breve descrição do segundo projeto.</p>
+          </div>
+        </div>
+
+    </section>
 
 
-
-    <section class="divPortifolio">
-      <a href="https://wa.me/5511970629125?text=Olá%20gostaria%20de%20saber%20mais%20sobre%20seu%20portfólio!" target="_blank" class="botao-whatsapp">
-        Chamar no WhatsApp
-      </a>
-      
+    <section class="contato">
+      <h1>Deseja me contatar?</h1>
+      <div>
+      <div class="formas">
+          <ul>
+            <h3>instagram</h3>
+            <li>nick: TwoakCompany</li>
+          </ul>
+          <ul>
+            <h3>Formulario</h3>
+            <li>Email: leonardomachadoarroyo14@gmail.com</li>
+          </ul>
+      </div>
+      <div class="formas" id="formasZAP">
+          <Button>
+            <a href="https://wa.me/5511992038075?text=Olá%20vim%20de%20seu%20portifólio%20da%20TwoakCompany%20e%20gostaria%20de%20conversar%20com%20você." target="_blank" style="text-decoration: none;" class="botao-whatsapp">
+                  Chamar no WhatsApp
+               </a>      
+          </Button>
+      </div>
+      </div>
     </section>
     
     <!-- RODAPE DO SITE -->
