--- a/index.html
+++ b/index.html
@@ -14,19 +14,33 @@
 
   <!--Cabeçalho-->
   <header>
-    <div class="logo">
+    <div class="logo" id="link-logo">
       <img src="imagens/vectorlogo/folha.png" alt="logoTwoak">
-      <h1 id="titulo-pagina">TWOAK COMPANY</h1>
+      <h1 id="titulo-pagina">
+        <a href="#link-somos" style="text-decoration: none; color: #4caf50;">TWOAK COMPANY</a>
+      </h1>
     </div>
     <div class="funcionalidades">
-      <button>NÓS CONHEÇA</button>
-      <button>CONTATOS</button>
-      <button>MODELOS</button>
+      <button>
+        <a href="#link-somos" style="text-decoration: none; color: #fff;">
+          NÓS CONHEÇA
+        </a>
+      </button>
+      <button>
+        <a href="#link-rodape" style="text-decoration: none; color: #fff;">
+          CONTATOS
+        </a>
+      </button>
+      <button>
+        <a href="#link-cards" style="text-decoration: none; color: #fff;">
+          MODELOS
+        </a>
+      </button>
     </div>
   </header>
 
   <!--DIV INICIAL SOMOS-->
-  <div class="somos">
+  <div class="somos" id="link-somos">
     <h1>O que somos?</h1>
     <p>
       Na <strong>Twoak Company</strong>, não criamos apenas sistemas — nós transformamos negócios! Desenvolvemos
@@ -142,7 +156,7 @@
         <img src="imagens/leoIcon.png" alt="icon" class="icon">
         <h3>Desenvolvedor Full-Stack</h3>
         <p></p>
-        <a href="/portifolio/portifolioLeo.html">Portfólio</a>
+        <a href="portifolio/portifolioLeo.html">Portfólio</a>
       </div>
 
     </div>
@@ -170,48 +184,48 @@
     </div>
   </div>
 
-  <!-- RODAPE DO SITE -->
-  <footer class="rodape">
-    <div class="coluna-rodape">
-      <h3>Sobre Nós</h3>
-      <ul>
-        <li>Quem somos</li>
-        <li>Missão</li>
-        <li>Visão</li>
-        <li>Valores</li>
-      </ul>
-    </div>
-    <div class="coluna-rodape">
-      <h3>Serviços</h3>
-      <ul>
-        <li><a href="#link-cards">Site Empresarial</a></li>
-        <li><a href="#link-cards">Cardapio Online + QrCode</a></li>
-        <li><a href="#link-cards">Sistema de Estoque</a></li>
-        <li><a href="#link-cards">Portifólio Profissional</a></li>
-        <li><a href="#link-cards">Automatização de tarefas</a></li>
-      </ul>
-    </div>
-
-    <div class="coluna-rodape">
-      <h3>Fale conosco</h3>
-      <ul>
-        <li><a href="mailto:leonardomachadoarroyo14@gmail.com" class="botao-email">Email: TwoakCompany@outlook.com</a>
-        </li>
-        <li><a href="https://wa.me/5511970629125?text=Olá%20gostaria%20de%20saber%20mais%20sobre%20seu%20portfólio!"
-            target="_blank" class="botao-whatsapp">Telefone: (11) 97062-9125</a></li>
-
-      </ul>
-    </div>
-
-    <div class="coluna-rodape">
-      <h3>Redes Sociais</h3>
-      <ul>
-        <li><a href="#">Instagram</a></li>
-        <li><a href="#">Facebook</a></li>
-        <li><a href="#">TikTok</a></li>
-      </ul>
-    </div>
-  </footer>
+    <!-- RODAPE DO SITE -->
+    <footer class="rodape" id="link-rodape">
+      <div class="coluna-rodape">
+        <h3>Sobre Nós</h3>
+        <ul>
+          <li><a href="#link-somos">Quem somos</a></li>
+          <li><a href="#link-somos">Missão</a></li>
+          <li><a href="#link-somos">Visão</a></li>
+          <li><a href="#link-somos">Valores</a></li>
+        </ul>
+      </div>
+      <div class="coluna-rodape">
+        <h3>Serviços</h3>
+        <ul>
+          <li><a href="#link-cards">Site Empresarial</a></li>
+          <li><a href="#link-cards">Cardapio Online + QrCode</a></li>
+          <li><a href="#link-cards">Sistema de Estoque</a></li>
+          <li><a href="#link-cards">Portifólio Profissional</a></li>
+          <li><a href="#link-cards">Automatização de tarefas</a></li>
+        </ul>
+      </div>
+    
+      <div class="coluna-rodape">
+        <h3>Fale conosco</h3>
+        <ul>
+          <li>Email: TwoakCompany@outlook.com</li>
+          <li>Email: TwoakCompany@gmail.com</li>
+          <br>
+          <li>Telefone Luan: (11) 97062-9125</li>
+          <li>Telefone Leo: (11) 99203-8075</li>
+        </ul>
+      </div>
+    
+      <div class="coluna-rodape">
+        <h3>Redes Sociais</h3>
+        <ul>
+          <li><a href="#">Instagram</a></li>
+          <li><a href="#">Facebook</a></li>
+          <li><a href="#">TikTok</a></li>
+        </ul>
+      </div>
+    </footer>
 
   <script src="script.js"></script>
 </body>
