--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Twoak Company</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="responsividade.css">
-  <link rel="icon" type="img" href="imagens/vectorlogo/logo.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Twoak Company: Soluções digitais personalizadas para pequenas empresas, incluindo sites, cardápios digitais e sistemas de estoque.">
+    <meta name="keywords" content="soluções digitais, sites empresariais, cardápio online, automação, Twoak Company">
+    <meta name="author_planes" content="Twoak Company">
+    <title>Twoak Company</title>
+    <link rel="icon" type="image/png" href="imagens/vectorlogo/logo.png">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -39,43 +42,24 @@
     </div>
   </header>
 
-  <!--DIV INICIAL SOMOS-->
-  <div class="somos" id="link-somos">
-    <h1>O que somos?</h1>
-    <p>
-      Na <strong>Twoak Company</strong>, não criamos apenas sistemas — nós transformamos negócios! Desenvolvemos
-      <strong>soluções digitais personalizadas</strong> para pequenas empresas e comércios locais, ajudando você a
-      automatizar processos, economizar tempo e aumentar seus lucros.
-    </p>
-    <p>
-      Seja um <strong>site profissional</strong>, um <strong>controle de estoque inteligente</strong>,
-      <strong>agendamentos automatizados</strong> ou até sistemas de <strong>comandas digitais</strong>, temos a
-      solução sob medida para o seu negócio.
-    </p>
-    <p>
-      Chega de planilhas complicadas, anotações perdidas e tempo desperdiçado. Com nossas ferramentas, você
-      ganha mais <strong>agilidade, organização e controle</strong>, focando no que realmente importa: o
-      <strong>crescimento da sua empresa</strong>.
-    </p> <br>
-    <h1>Bora modernizar?</h1>
-    <p>
-      Descubra como a tecnologia pode trabalhar a seu favor com sistemas <strong>fáceis de usar</strong>,
-      <strong>acessíveis</strong> e pensados para o dia a dia do pequeno empreendedor.
-    </p>
-    <p><strong>Vantagens de automatizar com a gente:</strong></p> <br>
-    <ul>
-      <li>✅ Ganhe tempo e produtividade</li>
-      <li>✅ Reduza erros e retrabalho</li>
-      <li>✅ Organize seu negócio de forma simples e segura</li>
-      <li>✅ Acompanhe tudo pelo celular ou computador</li>
-      <li>✅ Tenha relatórios e informações na palma da mão</li>
-    </ul>
-    <p>
-      <strong>Os preços?</strong> Sem susto, trabalhamos com <strong>estimativas médias</strong> e
-      <strong>orçamento personalizado</strong>. Fale com a gente e veja como é fácil começar.
-      <strong>Sem compromisso, só oportunidades.</strong>
-    </p>
-  </div>
+   <!-- Seção Somos -->
+    <div class="somos" id="link-somos">
+        <h1>O que somos?</h1>
+        <p>Na <strong>Twoak Company</strong>, não criamos apenas sistemas, nós transformamos negócios! Desenvolvemos <strong>soluções digitais personalizadas</strong> para pequenas empresas e comércios locais, ajudando você a automatizar processos, economizar tempo e aumentar seus lucros.</p>
+        <p>Seja um <strong>site profissional</strong>, um <strong>controle de estoque inteligente</strong>, <strong>agendamentos automatizados</strong> ou até sistemas de <strong>comandas digitais</strong>, temos a solução sob medida para o seu negócio.</p>
+        <p>Chega de planilhas complicadas, anotações perdidas e tempo desperdiçado. Com nossas ferramentas, você ganha mais <strong>agilidade, organização e controle</strong>, focando no que realmente importa: o <strong>crescimento da sua empresa</strong>.</p><br>
+        <h2>Bora modernizar?</h2>
+        <p>Descubra como a tecnologia pode trabalhar a seu favor com sistemas <strong>fáceis de usar</strong>, <strong>acessíveis</strong> e pensados para o dia a dia do pequeno empreendedor.</p>
+        <p><strong>Vantagens de automatizar com a gente:</strong></p>
+        <ul>
+            <li>✅ Ganhe tempo e produtividade</li>
+            <li>✅ Reduza erros e retrabalho</li>
+            <li>✅ Organize seu negócio de forma simples e segura</li>
+            <li>✅ Acompanhe tudo pelo celular ou computador</li>
+            <li>✅ Tenha relatórios e informações na palma da mão</li>
+        </ul><br>
+        <p><strong>Os preços?</strong> Sem susto, trabalhamos com <strong>estimativas médias</strong> e <strong>orçamento personalizado</strong>. Fale com a gente e veja como é fácil começar. <strong>Sem compromisso, só oportunidades.</strong></p>
+    </div>
 
   <!--PREÇO DOS PROJETOS-->
   <div class="cards-container">
@@ -148,7 +132,7 @@
         <img src="imagens/Luanicon.jpg" alt="icon" class="icon">
         <h3>Desenvolvedor Full-Stack</h3>
         <p></p>
-        <a href="#">Portfólio</a>
+        <a href="portifolio/portifolioluan.html">Me conheça</a>
       </div>
 
       <div class="card">
@@ -156,7 +140,7 @@
         <img src="imagens/leoIcon.png" alt="icon" class="icon">
         <h3>Desenvolvedor Full-Stack</h3>
         <p></p>
-        <a href="portifolio/portifolioLeo.html">Portfólio</a>
+        <a href="portifolio/portifolioLeo.html">Me conheça</a>
       </div>
 
     </div>
@@ -168,6 +152,7 @@
     <div class="icones">
       <div class="icone" id="python">
         <img src="imagens/tec/python.png" alt="Python">
+
       </div>
       <div class="icone" id="php">
         <img src="imagens/tec/php.png" alt="PHP">
@@ -184,48 +169,48 @@
     </div>
   </div>
 
-    <!-- RODAPE DO SITE -->
-    <footer class="rodape" id="link-rodape">
-      <div class="coluna-rodape">
-        <h3>Sobre Nós</h3>
-        <ul>
-          <li><a href="#link-somos">Quem somos</a></li>
-          <li><a href="#link-somos">Missão</a></li>
-          <li><a href="#link-somos">Visão</a></li>
-          <li><a href="#link-somos">Valores</a></li>
-        </ul>
-      </div>
-      <div class="coluna-rodape">
-        <h3>Serviços</h3>
-        <ul>
-          <li><a href="#link-cards">Site Empresarial</a></li>
-          <li><a href="#link-cards">Cardapio Online + QrCode</a></li>
-          <li><a href="#link-cards">Sistema de Estoque</a></li>
-          <li><a href="#link-cards">Portifólio Profissional</a></li>
-          <li><a href="#link-cards">Automatização de tarefas</a></li>
-        </ul>
-      </div>
-    
-      <div class="coluna-rodape">
-        <h3>Fale conosco</h3>
-        <ul>
-          <li>Email: TwoakCompany@outlook.com</li>
-          <li>Email: TwoakCompany@gmail.com</li>
-          <br>
-          <li>Telefone Luan: (11) 97062-9125</li>
-          <li>Telefone Leo: (11) 99203-8075</li>
-        </ul>
-      </div>
-    
-      <div class="coluna-rodape">
-        <h3>Redes Sociais</h3>
-        <ul>
-          <li><a href="#">Instagram</a></li>
-          <li><a href="#">Facebook</a></li>
-          <li><a href="#">TikTok</a></li>
-        </ul>
-      </div>
-    </footer>
+  <!-- RODAPE DO SITE -->
+  <footer class="rodape" id="link-rodape">
+    <div class="coluna-rodape">
+      <h3>Sobre Nós</h3>
+      <ul>
+        <li><a href="#link-somos">Quem somos</a></li>
+        <li><a href="#link-somos">Missão</a></li>
+        <li><a href="#link-somos">Visão</a></li>
+        <li><a href="#link-somos">Valores</a></li>
+      </ul>
+    </div>
+    <div class="coluna-rodape">
+      <h3>Serviços</h3>
+      <ul>
+        <li><a href="#link-cards">Site Empresarial</a></li>
+        <li><a href="#link-cards">Cardapio Online + QrCode</a></li>
+        <li><a href="#link-cards">Sistema de Estoque</a></li>
+        <li><a href="#link-cards">Portifólio Profissional</a></li>
+        <li><a href="#link-cards">Automatização de tarefas</a></li>
+      </ul>
+    </div>
+
+    <div class="coluna-rodape">
+      <h3>Fale conosco</h3>
+      <ul>
+        <li><a href="mailto:companytwoak@gmail.com">Email: companytwoak@gmail.com</a></li>
+        <br>
+        <li><a href="https://wa.me/5511970629125?text=Olá%20Luan,%20vim%20do%20portfólio%20da%20TwoakCompany">Telefone
+            Luan: (11) 97062-9125</a></li>
+        <li><a href="https://wa.me/5511992038075?text=Olá%20Leo,%20vim%20do%20portfólio%20da%20TwoakCompany">Telefone
+            Leo: (11) 99203-8075</a></li>
+      </ul>
+    </div>
+
+    <div class="coluna-rodape">
+      <h3>Redes Sociais</h3>
+      <ul>
+        <li><a href="https://www.instagram.com/twoakdevs?igsh=dzcwemg1YmhjNTVk">Instagram</a></li>
+        <li><a href="https://www.tiktok.com/@twoakdevs?_t=ZM-8xXFHKoJp6m&_r=1">TikTok</a></li>
+      </ul>
+    </div>
+  </footer>
 
   <script src="script.js"></script>
 </body>
