--- a/portifolio/portifolioluan.html
+++ b/portifolio/portifolioluan.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Apresentação Leonardo</title>
-  <link rel="stylesheet" href="../style.css">
-  <link rel="stylesheet" href="../responsividade.css">
-  <link rel="icon" type="img" href="/imagens/vectorlogo/folha.png">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Apresentação Luan</title>
+    <link rel="stylesheet"  href="../style.css">
+    <link rel="stylesheet" href="../responsividade.css">
+    <link rel="icon" type="img" href="/imagens/vectorlogo/folha.png">
 </head>
-
 <body>
 
-  <!--CABEÇALHO-->
+     <!--CABEÇALHO-->
   <header>
     <div class="logo">
       <img src="../imagens/vectorlogo/folha.png" alt="logoTwoak">
@@ -25,39 +23,36 @@
     </div>
   </header>
 
-  <!--DIV INICIAL SOMOS-->
-  <section class="divPortifolio" id="link-divPortifolio">
-    <img src="../imagens/leoIcon.png" id="iconPortifolio">
-    <div>
-      <h1>Leonardo Machado arroyo</h1>
-      <h3>Integrante Full-Stack</h3>
-      <p>Sou um estudante de 17 anos do curso Técnico em Análise e Desenvolvimento de Sistemas, apaixonado por
-        tecnologia e determinado a me destacar no mercado de desenvolvimento, com foco especial em back-end. Tenho
-        habilidades técnicas em diversas linguagens modernas e estou comprometido em aprimorar continuamente minhas
-        competências. No desenvolvimento do meu Trabalho de Conclusão de Curso (TCC), apliquei conhecimentos básicos de
-        TypeScript com React Native por mais de um ano, adquirindo uma base sólida para projetos mobile. Estudei HTML,
-        CSS e JavaScript de forma autodidata por meses, desenvolvendo projetos práticos e consolidando minha compreensão
-        do front-end, embora ainda esteja em processo de amadurecimento. No back-end, domino os fundamentos de PHP,
-        incluindo sua aplicação em conexões com bancos de dados, o que me permite criar soluções dinâmicas e funcionais.
-        Estou motivado a continuar aprendendo e contribuindo com projetos inovadores.</p>
-    </div>
-  </section>
+    <!--DIV INICIAL SOMOS--> 
+    <section class="divPortifolio" id="link-divPortifolio">
+      <img src="../imagens/Luanicon.jpg"  id="iconPortifolio">
+      <div>
+        <h1>Luan de Assis Fabruzzi Rosa</h1>
+        <h3>Integrante Full-Stack</h3>
+        <h4><strong>Sobre mim</strong></h4>
+        <p>Sou estudante de Técnico em Análise e Desenvolvimento de Sistemas, com foco no aprimoramento de minhas habilidades e na construção de conhecimento sólido na área. Atualmente, dedico-me ao desenvolvimento da minha startup, onde aplico minha expertise técnica. Tenho maior afinidade com o desenvolvimento back-end, mas também entrego resultados consistentes e de qualidade no front-end.</p>
+        </div>
+    </section>
 
-  <div class="tecnologia">
+     <div class="tecnologia">
     <h2>TECNOLOGIAS DE CONHECIMENTO TÉCNICO</h2>
     <div class="icones">
+      <div class="icone" id="python">
+        <img src="../imagens/tec/python.png" alt="Python">
+      </div>
       <div class="icone" id="php">
         <img src="../imagens/tec/php.png" alt="PHP">
       </div>
       <div class="icone" id="web3">
         <img src="../imagens/tec/web3.png" alt="Web3">
       </div>
-      <div class="icone" id="TypeScript">
-        <img src="../imagens/tec/typescript.png" alt="TypeScript">
+      <div class="icone" id="MySQL">
+        <img src="../imagens/tec/mysql.png" alt="MySQL">
       </div>
     </div>
   </div>
 
+  
   <!-- RODAPE DO SITE -->
   <footer class="rodape" id="link-rodape">
     <div class="coluna-rodape">
@@ -101,7 +96,6 @@
     </div>
   </footer>
 
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
-
 </html>
