--- a/detalhes.html
+++ b/detalhes.html
@@ -119,15 +119,16 @@
     </div>
   </div>
 
-  <!--Final de página-->
-  <footer class="rodape">
+
+<!--RODAPÉ-->
+  <footer class="rodape" id="link-rodape">
     <div class="coluna-rodape">
       <h3>Sobre Nós</h3>
       <ul>
-        <li>Quem somos</li>
-        <li>Missão</li>
-        <li>Visão</li>
-        <li>Valores</li>
+        <li><a href="#link-somos">Quem somos</a></li>
+        <li><a href="#link-somos">Missão</a></li>
+        <li><a href="#link-somos">Visão</a></li>
+        <li><a href="#link-somos">Valores</a></li>
       </ul>
     </div>
     <div class="coluna-rodape">
@@ -144,19 +145,20 @@
     <div class="coluna-rodape">
       <h3>Fale conosco</h3>
       <ul>
-        <li><a href="mailto:leonardomachadoarroyo14@gmail.com" class="botao-email">Email: TwoakCompany@outlook.com</a>
-        </li>
-        <li><a href="https://wa.me/5511970629125?text=Olá%20gostaria%20de%20saber%20mais%20sobre%20seu%20portfólio!"
-            target="_blank" class="botao-whatsapp">Telefone: (11) 97062-9125</a></li>
+        <li><a href="mailto:companytwoak@gmail.com">Email: companytwoak@gmail.com</a></li>
+        <br>
+        <li><a href="https://wa.me/5511970629125?text=Olá%20Luan,%20vim%20do%20portfólio%20da%20TwoakCompany">Telefone
+            Luan: (11) 97062-9125</a></li>
+        <li><a href="https://wa.me/5511992038075?text=Olá%20Leo,%20vim%20do%20portfólio%20da%20TwoakCompany">Telefone
+            Leo: (11) 99203-8075</a></li>
       </ul>
     </div>
 
     <div class="coluna-rodape">
       <h3>Redes Sociais</h3>
       <ul>
-        <li><a href="#">Instagram</a></li>
-        <li><a href="#">Facebook</a></li>
-        <li><a href="#">TikTok</a></li>
+        <li><a href="https://www.instagram.com/twoakdevs?igsh=dzcwemg1YmhjNTVk">Instagram</a></li>
+        <li><a href="https://www.tiktok.com/@twoakdevs?_t=ZM-8xXFHKoJp6m&_r=1">TikTok</a></li>
       </ul>
     </div>
   </footer>
