--- a/detalhes.html
+++ b/detalhes.html
@@ -119,8 +119,7 @@
     </div>
   </div>
 
-
-<!--RODAPÉ-->
+  <!-- RODAPE DO SITE -->
   <footer class="rodape" id="link-rodape">
     <div class="coluna-rodape">
       <h3>Sobre Nós</h3>
