--- a/index.html
+++ b/index.html
@@ -15,47 +15,20 @@
 
 <body>
 
-<header>
-  <div class="logo" id="link-logo">
-    <img src="imagens/vectorlogo/folha.png" alt="logoTwoak">
-    <h1 id="titulo-pagina">
-      <a href="#link-somos">TWOAK COMPANY</a>
-    </h1>
-  </div>
+  <header>
+     <div class="logo" id="link-logo">
+     <img src="imagens/vectorlogo/folha.png" alt="logoTwoak">
+       <h1 id="titulo-pagina">
+         <a href="#link-somos">TWOAK COMPANY</a>
+       </h1>
+     </div>
 
-  <nav class="funcionalidades">
-    <a href="#link-somos">NÓS CONHEÇA</a>
-    <a href="#link-rodape">CONTATOS</a>
-    <a href="#link-cards">MODELOS</a>
-  </nav>
-</header>
-
-
-
-<section class="secao-formulario">
-  <div class="form-container">
-    <div class="form-bloco">
-      <h1>Planeja nos contratar?</h1>
-      <p>Para confirmar ou encomendar algum serviço através de nossos serviços, basta nos enviar uma mensagem por whatsApp nos informando de seus planos.</p>
-
-      <div class="div-redes">
-        <a href="https://www.instagram.com/twoakdevs/?igsh=dzcwemg1YmhjNTVk#" style="text-decoration: none;">
-          <div class="redes">
-            <img src="/imagens/logos-ext/instagram.png" alt="Instagram" />
-            <p > Nosso Instagram</p>
-          </div>
-        </a>
-      </div>
-    </div>
-
-    <div class="formulario-box">
-      <h3>Contato Rápido WhatsApp</h3>
-      <a href="https://wa.me/5511970629125?text=Olá%20Luan,%20vim%20da%20TwoakCompany%20e%20gostaria%20de%20mais%20informações.">
-      Clique Aqui
-      </a>
-    </div>
-  </div>
-</section>
+     <nav class="funcionalidades">
+      <a href="#link-somos">NÓS CONHEÇA</a>
+       <a href="#link-contato">CONTATOS</a>
+       <a href="#link-cards">MODELOS</a>
+     </nav>
+  </header>
 
 
    <!-- Seção Somos -->
@@ -136,6 +109,31 @@
       <button onclick="mudarSlide(1)">❯</button>
     </div>
   </div>
+
+  <section class="secao-formulario" id="link-contato">
+    <div class="form-container">
+      <div class="form-bloco">
+        <h1>Planeja nos contratar?</h1>
+        <p>Para confirmar ou encomendar algum serviço através de nossos serviços, basta nos enviar uma mensagem por whatsApp nos informando de seus planos.</p>
+
+        <div class="div-redes">
+          <a href="https://www.instagram.com/twoakdevs/?igsh=dzcwemg1YmhjNTVk#" style="text-decoration: none;">
+            <div class="redes">
+              <img src="/imagens/logos-ext/instagram.png" alt="Instagram" />
+              <p > Nosso Instagram</p>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="formulario-box">
+        <h3>Contato Rápido WhatsApp</h3>
+        <a href="https://wa.me/5511970629125?text=Olá%20Luan,%20vim%20da%20TwoakCompany%20e%20gostaria%20de%20mais%20informações.">
+        Clique Aqui
+        </a>
+      </div>
+    </div>
+  </section>
 
   <!--Nossos Portifólios e apresentação-->
   <div class="somos">
