--- a/portifolio/portifolioluan.html
+++ b/portifolio/portifolioluan.html
@@ -10,15 +10,17 @@
 </head>
 <body>
 
-     <!--CABEÇALHO-->
+  <!--CABEÇALHO-->
   <header>
     <div class="logo">
       <img src="../imagens/vectorlogo/folha.png" alt="logoTwoak">
-      <h1 id="titulo-pagina">TWOAK COMPANY</h1>
+       <h1 id="titulo-pagina">
+         <a>TWOAK COMPANY</a>
+       </h1>
     </div>
     <div class="funcionalidades">
       <a href="../index.html">
-        <button>VOLTAR</button>
+        VOLTAR
       </a>
     </div>
   </header>
