--- a/index.html
+++ b/index.html
@@ -1,232 +1,227 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-  <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Twoak Company: Soluções digitais personalizadas para pequenas empresas, incluindo sites, cardápios digitais e sistemas de estoque.">
-    <meta name="keywords" content="soluções digitais, sites empresariais, cardápio online, automação, Twoak Company">
-    <meta name="author_planes" content="Twoak Company">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Twoak Company: Soluções digitais personalizadas para pequenas empresas, incluindo sites, cardápios digitais e sistemas de estoque."
+    />
+    <meta
+      name="keywords"
+      content="soluções digitais, sites empresariais, cardápio online, automação, Twoak Company"
+    />
+    <meta name="author_planes" content="Twoak Company" />
     <title>Twoak Company</title>
-    <link rel="icon" type="image/png" href="imagens/vectorlogo/logo.png">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="icon" type="image/png" href="imagens/vectorlogo/logo.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
 
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-  <header>
-     <div class="logo" id="link-logo">
-     <img src="imagens/vectorlogo/folha.png" alt="logoTwoak">
-       <h1 id="titulo-pagina">
-         <a href="#link-somos">TWOAK COMPANY</a>
-       </h1>
-     </div>
+  <body>
+    <!--Nav Bar-->
+    <header>
+      <div class="logo" id="link-logo">
+        <img src="imagens/vectorlogo/folha.png" alt="logoTwoak" />
+        <h1 id="titulo-pagina">
+          <h1 id="titulo-pagina">TWOAK COMPANY</h1>
 
-     <nav class="funcionalidades">
-      <a href="#link-somos">NÓS CONHEÇA</a>
-       <a href="#link-contato">CONTATOS</a>
-       <a href="#link-cards">MODELOS</a>
-     </nav>
-  </header>
-
-
-   <!-- Seção Somos -->
-    <div class="somos" id="link-somos">
-        <h1>O que somos?</h1>
-        <p>Na <strong>Twoak Company</strong>, não criamos apenas sistemas, nós transformamos negócios! Desenvolvemos <strong>soluções digitais personalizadas</strong> para pequenas empresas e comércios locais, ajudando você a automatizar processos, economizar tempo e aumentar seus lucros.</p>
-        <p>Seja um <strong>site profissional</strong>, um <strong>controle de estoque inteligente</strong>, <strong>agendamentos automatizados</strong> ou até sistemas de <strong>comandas digitais</strong>, temos a solução sob medida para o seu negócio.</p>
-        <p>Chega de planilhas complicadas, anotações perdidas e tempo desperdiçado. Com nossas ferramentas, você ganha mais <strong>agilidade, organização e controle</strong>, focando no que realmente importa: o <strong>crescimento da sua empresa</strong>.</p><br>
-        <h2>Bora modernizar?</h2>
-        <p>Descubra como a tecnologia pode trabalhar a seu favor com sistemas <strong>fáceis de usar</strong>, <strong>acessíveis</strong> e pensados para o dia a dia do pequeno empreendedor.</p>
-        <p><strong>Vantagens de automatizar com a gente:</strong></p>
-        <ul>
-            <li>✅ Ganhe tempo e produtividade</li>
-            <li>✅ Reduza erros e retrabalho</li>
-            <li>✅ Organize seu negócio de forma simples e segura</li>
-            <li>✅ Acompanhe tudo pelo celular ou computador</li>
-            <li>✅ Tenha relatórios e informações na palma da mão</li>
-        </ul><br>
-        <p><strong>Os preços?</strong> Sem susto, trabalhamos com <strong>estimativas médias</strong> e <strong>orçamento personalizado</strong>. Fale com a gente e veja como é fácil começar. <strong>Sem compromisso, só oportunidades.</strong></p>
-    </div>
-
-  <!--PREÇO DOS PROJETOS-->
-  <div class="cards-container">
-    <div class="card" id="link-cards">
-      <img src="imagens/samples/sites.jpg" alt="Empresarial">
-      <h3>Sites Online Empresarial</h3>
-      <p>Crie uma presença online profissional para seu estabelecimento.</p>
-      <a href="detalhes.html">R$399,99+</a>
-    </div>
-
-    <div class="card">
-      <img src="imagens/samples/cardapio.jpg" alt="Cardapio">
-      <h3>Cardapio Online + QrCode</h3>
-      <p>Mostre tudo que a de bom com apenas um QrCode.</p>
-      <a href="detalhes.html">R$199,99+</a>
-    </div>
-
-    <div class="card">
-      <img src="imagens/samples/estoque.jpg" alt="Controle de Estoque">
-      <h3>Sistema de Estoque</h3>
-      <p>Controle suas entradas e saídas de produtos com facilidade.</p>
-      <a href="detalhes.html">R$449,99+</a>
-    </div>
-
-    <div class="card">
-      <img src="imagens/samples/portifolio.webp" alt="portifolio">
-      <h3>Portifólio Profissional</h3>
-      <p>Impressione os demais com seu incrivel portifólio personalizado a sua cara.</p>
-      <a href="detalhes.html">R$249,99+</a>
-    </div>
-
-    <div class="card">
-      <img src="imagens/samples/automatização.webp" alt="automatizacao">
-      <h3>Automatização de tarefas</h3>
-      <p>Acabe com a perde de tempo.</p>
-      <a href="detalhes.html">R$299,99+</a>
-    </div>
-  </div>
-
-  <!--CARROSEL DE PROJETOS(Adicionar projetos reais fazer troca mas pra frente)-->
-  <div class="carrossel">
-    <div class="carrossel-container">
-      <div class="slide ativo">
-        <img src="imagens/samples/barbearia.png" alt="Modelo 1">
-        <p>Modelo de site para barbearia</p>
+      <!-- Adicione isso dentro da sua navbar -->
+          <div class="redes-sociais">
+            <a
+              href="https://www.instagram.com/twoakdevs?igsh=dzcwemg1YmhjNTVk"
+              target="_blank"
+              class="social-link"
+              aria-label="Instagram"
+            >
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a
+              href="https://www.tiktok.com/@twoakdevs?_t=ZM-8xXFHKoJp6m&_r=1"
+              target="_blank"
+              class="social-link"
+              aria-label="TikTok"
+            >
+              <i class="fab fa-tiktok"></i>
+            </a>
+          </div>
+        </h1>
       </div>
-      <div class="slide">
-        <img src="imagens/samples/cardapio.jpg" alt="Modelo 2">
-        <p>Entre no seu comércio com facilidade e tecnologia</p>
-      </div>
-      <div class="slide">
-        <img src="imagens/samples/sites.jpg" alt="Modelo 3">
-        <p>Sites online</p>
-      </div>
-    </div>
-    <div class="botoes-carrossel">
-      <button onclick="mudarSlide(-1)">❮</button>
-      <button onclick="mudarSlide(1)">❯</button>
-    </div>
-  </div>
 
-  <section class="secao-formulario" id="link-contato">
-    <div class="form-container">
-      <div class="form-bloco">
-        <h1>Planeja nos contratar?</h1>
-        <p>Para confirmar ou encomendar algum serviço através de nossos serviços, basta nos enviar uma mensagem por whatsApp nos informando de seus planos.</p>
+      <nav class="funcionalidades">
+        <a href="#link-somos">Inicio</a>
+        <a href="#integrantes">Integrantes</a>
+        <a id="entrar-contato" href="contato.html">Entre em contato</a>
+      </nav>
+    </header>
 
-        <div class="div-redes">
-          <a href="https://www.instagram.com/twoakdevs/?igsh=dzcwemg1YmhjNTVk#" style="text-decoration: none;">
-            <div class="redes">
-              <img src="/imagens/logos-ext/instagram.png" alt="Instagram" />
-              <p > Nosso Instagram</p>
-            </div>
-          </a>
+    <section class="secao-somos" id="link-somos">
+      <div class="conteudo-somos">
+        <div class="texto-somos">
+          <h1>Transformamos Negócios com Tecnologia</h1>
+          <p>
+            A <strong>Twoak Company</strong> é especializada em desenvolver
+            soluções digitais sob medida para pequenas empresas e comércios
+            locais. Automatizamos processos, otimizamos seu tempo e ampliamos
+            seus resultados.
+          </p>
+          <p>
+            Criamos sistemas como <strong>sites profissionais</strong>,
+            <strong>controles de estoque inteligentes</strong>,
+            <strong>agendamentos automatizados</strong> e
+            <strong>comandas digitais</strong>, até mesmo
+            <strong>sistemas e aplicativos personalizados</strong>. Tudo pensado para
+            seu dia a dia.
+          </p>
+          <p>
+            Nossa missão é simplificar sua gestão com ferramentas acessíveis,
+            intuitivas e eficientes. Chega de planilhas confusas e retrabalho.
+            Comece a investir em mais
+            <strong>agilidade, controle e crescimento</strong>.
+          </p>
+        </div>
+
+        <div class="beneficios-somos">
+          <h2>Por que escolher a Twoak?</h2>
+          <ul>
+            <li><span></span> Mais produtividade com menos esforço</li>
+            <li><span></span> Redução de erros operacionais</li>
+            <li><span></span> Organização e segurança em todos os processos</li>
+            <li><span></span> Gestão via celular ou computador</li>
+            <li><span></span> Relatórios e insights estratégicos</li>
+          </ul>
         </div>
       </div>
+    </section>
 
-      <div class="formulario-box">
-        <h3>Contato Rápido WhatsApp</h3>
-        <a href="https://wa.me/5511970629125?text=Olá%20Luan,%20vim%20da%20TwoakCompany%20e%20gostaria%20de%20mais%20informações.">
-        Clique Aqui
-        </a>
-      </div>
-    </div>
-  </section>
-
-  <!--Nossos Portifólios e apresentação-->
-  <div class="somos">
-    <div class="cards-container">
-
-      <h1>Integrantes do projeto</h1>
-
-      <div class="card">
-        <h1 id="nomes">Luan</h1>
-        <img src="imagens/Luanicon.jpg" alt="icon" class="icon">
-        <h3>Desenvolvedor Full-Stack</h3>
-        <p></p>
-        <a href="portifolio/portifolioluan.html">Me conheça</a>
-      </div>
-
-      <div class="card">
-        <h1 id="nomes">Leonardo</h1>
-        <img src="imagens/leoIcon.png" alt="icon" class="icon">
-        <h3>Desenvolvedor Full-Stack</h3>
-        <p></p>
-        <a href="portifolio/portifolioLeo.html">Me conheça</a>
-      </div>
-
-    </div>
-  </div>
-
-  <!--tecnologias usadas-->
-  <div class="tecnologia">
-    <h2>TECNOLOGIAS</h2>
-    <div class="icones">
-      <div class="icone" id="python">
-        <img src="imagens/tec/python.png" alt="Python">
-
-      </div>
-      <div class="icone" id="php">
-        <img src="imagens/tec/php.png" alt="PHP">
-      </div>
-      <div class="icone" id="web3">
-        <img src="imagens/tec/web3.png" alt="Web3">
-      </div>
-      <div class="icone" id="MySQL">
-        <img src="imagens/tec/mysql.png" alt="MySQL">
-      </div>
-      <div class="icone" id="react">
-        <img src="imagens/tec/react.png" alt="react">
-      </div>
-    </div>
-  </div>
-
-  <!-- RODAPE DO SITE -->
-  <footer class="rodape" id="link-rodape">
-    <div class="coluna-rodape">
-      <h3>Sobre Nós</h3>
-      <ul>
-        <li><a href="#link-somos">Quem somos</a></li>
-        <li><a href="#link-somos">Missão</a></li>
-        <li><a href="#link-somos">Visão</a></li>
-        <li><a href="#link-somos">Valores</a></li>
-      </ul>
-    </div>
-    <div class="coluna-rodape">
-      <h3>Serviços</h3>
-      <ul>
-        <li><a href="#link-cards">Site Empresarial</a></li>
-        <li><a href="#link-cards">Cardapio Online + QrCode</a></li>
-        <li><a href="#link-cards">Sistema de Estoque</a></li>
-        <li><a href="#link-cards">Portifólio Profissional</a></li>
-        <li><a href="#link-cards">Automatização de tarefas</a></li>
-      </ul>
+    <div>
+      <!--QUEBRA DE LINHA -->
+      <hr class="linha-verde" />
     </div>
 
-    <div class="coluna-rodape">
-      <h3>Fale conosco</h3>
-      <ul>
-        <li><a href="mailto:companytwoak@gmail.com">Email: companytwoak@gmail.com</a></li>
-        <br>
-        <li><a href="https://wa.me/5511970629125?text=Olá%20Luan,%20vim%20do%20portfólio%20da%20TwoakCompany">Telefone
-            Luan: (11) 97062-9125</a></li>
-        <li><a href="https://wa.me/5511992038075?text=Olá%20Leo,%20vim%20do%20portfólio%20da%20TwoakCompany">Telefone
-            Leo: (11) 99203-8075</a></li>
-      </ul>
-    </div>
+    <!--TECNOLOGIAS-->
+    <section class="secao-tecnologias">
+      <!-- Imagem notebook sem container -->
+      <img
+        src="imagens/prints/notebook.png"
+        alt="Notebook"
+        class="imagem-notebook"
+      />
 
-    <div class="coluna-rodape">
-      <h3>Redes Sociais</h3>
-      <ul>
-        <li><a href="https://www.instagram.com/twoakdevs?igsh=dzcwemg1YmhjNTVk">Instagram</a></li>
-        <li><a href="https://www.tiktok.com/@twoakdevs?_t=ZM-8xXFHKoJp6m&_r=1">TikTok</a></li>
-      </ul>
-    </div>
-  </footer>
+      <!-- Carrossel das tecnologias -->
+      <div class="carrossel-tecnologias">
+        <div class="icones-carousel" id="carousel">
+          <div class="icone">
+            <img src="imagens/tec/python.png" alt="Python" />
+          </div>
+          <div class="icone"><img src="imagens/tec/php.png" alt="PHP" /></div>
+          <div class="icone"><img src="imagens/tec/web3.png" alt="Web3" /></div>
+          <div class="icone">
+            <img src="imagens/tec/mysql.png" alt="MySQL" />
+          </div>
+          <div class="icone">
+            <img src="imagens/tec/react.png" alt="React" />
+          </div>
+          <div class="icone">
+            <img src="imagens/tec/typescript.png" alt="TypeScript" />
+          </div>
+        </div>
+      </div>
+      <script>
+        const carousel = document.getElementById("carousel");
+        carousel.innerHTML += carousel.innerHTML;
+      </script>
+    </section>
 
-  <script src="script.js"></script>
-</body>
+    <!-- Nossos Portfólios e apresentação -->
+    <section class="apresentacao-integrantes" id="integrantes">
+      <h1 class="titulo-integrantes">Integrantes do projeto</h1>
+      <div class="container-integrantes">
+        <div class="card-integrante">
+          <h2 class="nome-integrante">Luan</h2>
+          <img src="imagens/Luanicon.jpg" alt="icon" class="foto-integrante" />
+          <h3>Desenvolvedor Full-Stack</h3>
+          <a href="portifolio/portifolioluan.html">Me conheça</a>
+        </div>
 
+        <div class="card-integrante">
+          <h2 class="nome-integrante">Leonardo</h2>
+          <img src="imagens/leoIcon.png" alt="icon" class="foto-integrante" />
+          <h3>Desenvolvedor Full-Stack</h3>
+          <a href="portifolio/portifolioLeo.html">Me conheça</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- RODAPE DO SITE -->
+    <footer class="rodape" id="link-rodape">
+      <div class="coluna-rodape">
+        <h3>Sobre Nós</h3>
+        <ul>
+          <li><a href="#link-somos">Quem somos</a></li>
+          <li><a href="#link-somos">Missão</a></li>
+          <li><a href="#link-somos">Visão</a></li>
+          <li><a href="#link-somos">Valores</a></li>
+        </ul>
+      </div>
+      <div class="coluna-rodape">
+        <h3>Serviços</h3>
+        <ul>
+          <li><a href="contato.html">Site Empresarial</a></li>
+          <li><a href="contato.html">Cardapio Online + QrCode</a></li>
+          <li><a href="contato.html">Sistema de Estoque</a></li>
+          <li><a href="contato.html">Portifólio Profissional</a></li>
+          <li><a href="contato.html">Automatização de tarefas</a></li>
+        </ul>
+      </div>
+
+      <div class="coluna-rodape">
+        <h3>Fale conosco</h3>
+        <ul>
+          <li>
+            <a href="mailto:companytwoak@gmail.com"
+              >Email: companytwoak@gmail.com</a
+            >
+          </li>
+          <br />
+          <li>
+            <a
+              href="https://wa.me/5511970629125?text=Olá%20Luan,%20vim%20do%20portfólio%20da%20TwoakCompany"
+              >Telefone Luan: (11) 97062-9125</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://wa.me/5511992038075?text=Olá%20Leo,%20vim%20do%20portfólio%20da%20TwoakCompany"
+              >Telefone Leo: (11) 99203-8075</a
+            >
+          </li>
+        </ul>
+      </div>
+
+      <div class="coluna-rodape">
+        <h3>Redes Sociais</h3>
+        <ul>
+          <li>
+            <a href="https://www.instagram.com/twoakdevs?igsh=dzcwemg1YmhjNTVk"
+              >Instagram</a
+            >
+          </li>
+          <li>
+            <a href="https://www.tiktok.com/@twoakdevs?_t=ZM-8xXFHKoJp6m&_r=1"
+              >TikTok</a
+            >
+          </li>
+        </ul>
+      </div>
+    </footer>
+  </body>
 </html>
