--- a/portifolio/portifolioLeo.html
+++ b/portifolio/portifolioLeo.html
@@ -1,109 +1,144 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Apresentação Leonardo</title>
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="portifolios.css" />
+    <link rel="icon" type="img" href="../imagens/vectorlogo/folha.png" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Apresentação Leonardo</title>
-  <link rel="stylesheet" href="../style.css">
-  <link rel="stylesheet" href="../responsividade.css">
-  <link rel="icon" type="img" href="/imagens/vectorlogo/folha.png">
-</head>
-
-<body>
-
-  <!--CABEÇALHO-->
-  <header>
-    <div class="logo">
-      <img src="../imagens/vectorlogo/folha.png" alt="logoTwoak">
-       <h1 id="titulo-pagina">
-         <a>TWOAK COMPANY</a>
-       </h1>
-    </div>
-    <div class="funcionalidades">
-      <a href="../index.html">
-        VOLTAR
-      </a>
-    </div>
-  </header>
-
-  <!--DIV INICIAL SOMOS-->
-  <section class="divPortifolio" id="link-divPortifolio">
-    <img src="../imagens/leoIcon.png" id="iconPortifolio">
-    <div>
-      <h1>Leonardo Machado arroyo</h1>
-      <h3>Integrante Full-Stack</h3>
-      <p>Sou um estudante de 17 anos do curso Técnico em Análise e Desenvolvimento de Sistemas, apaixonado por
-        tecnologia e determinado a me destacar no mercado de desenvolvimento, com foco especial em back-end. Tenho
-        habilidades técnicas em diversas linguagens modernas e estou comprometido em aprimorar continuamente minhas
-        competências. No desenvolvimento do meu Trabalho de Conclusão de Curso (TCC), apliquei conhecimentos básicos de
-        TypeScript com React Native por mais de um ano, adquirindo uma base sólida para projetos mobile. Estudei HTML,
-        CSS e JavaScript de forma autodidata por meses, desenvolvendo projetos práticos e consolidando minha compreensão
-        do front-end, embora ainda esteja em processo de amadurecimento. No back-end, domino os fundamentos de PHP,
-        incluindo sua aplicação em conexões com bancos de dados, o que me permite criar soluções dinâmicas e funcionais.
-        Estou motivado a continuar aprendendo e contribuindo com projetos inovadores.</p>
-    </div>
-  </section>
-
-  <div class="tecnologia">
-    <h2>TECNOLOGIAS DE CONHECIMENTO TÉCNICO</h2>
-    <div class="icones">
-      <div class="icone" id="php">
-        <img src="../imagens/tec/php.png" alt="PHP">
+  <body>
+    <!--Nav Bar-->
+    <header>
+      <div class="logo" id="link-logo">
+        <img src="../imagens/vectorlogo/folha.png" alt="logoTwoak" />
+        <h1 id="titulo-pagina">
+          <h1 id="titulo-pagina">TWOAK COMPANY</h1>
+        </h1>
       </div>
-      <div class="icone" id="web3">
-        <img src="../imagens/tec/web3.png" alt="Web3">
+
+      <nav class="funcionalidades">
+        <a href="../index.html #link-somos">Inicio</a>
+        <a href="../index.html #integrantes">Integrantes</a>
+        <a id="entrar-contato" href="../contato.html">Entre em contato</a>
+      </nav>
+    </header>
+
+    <!--DIV INICIAL SOMOS-->
+    <section class="divPortifolio" id="link-divPortifolio">
+      <img src="../imagens/leoIcon.png" id="iconPortifolio" />
+      <div>
+        <h1>Leonardo Machado arroyo</h1>
+        <h3>Integrante Full-Stack</h3>
+        <p>
+          Sou um estudante de 17 anos do curso Técnico em Análise e
+          Desenvolvimento de Sistemas, apaixonado por tecnologia e determinado a
+          me destacar no mercado de desenvolvimento, com foco especial em
+          back-end. Tenho habilidades técnicas em diversas linguagens modernas e
+          estou comprometido em aprimorar continuamente minhas competências. No
+          desenvolvimento do meu Trabalho de Conclusão de Curso (TCC), apliquei
+          conhecimentos básicos de TypeScript com React Native por mais de um
+          ano, adquirindo uma base sólida para projetos mobile. Estudei HTML,
+          CSS e JavaScript de forma autodidata por meses, desenvolvendo projetos
+          práticos e consolidando minha compreensão do front-end, embora ainda
+          esteja em processo de amadurecimento. No back-end, domino os
+          fundamentos de PHP, incluindo sua aplicação em conexões com bancos de
+          dados, o que me permite criar soluções dinâmicas e funcionais. Estou
+          motivado a continuar aprendendo e contribuindo com projetos
+          inovadores.
+        </p>
       </div>
-      <div class="icone" id="TypeScript">
-        <img src="../imagens/tec/typescript.png" alt="TypeScript">
-      </div>
+    </section>
+
+<!--TECNOLOGIAS-->
+<hr class="linha-verde" />
+  <h1 class="titulo-integrantes">tecnologias de conhecimento</h1>
+   <section class="secao-tecnologias">
+  <!-- Imagem notebook sem container -->
+  <img src="../imagens/prints/notebook.png" alt="Notebook" class="imagem-notebook" />
+
+
+  <!-- Carrossel das tecnologias -->
+  <div class="carrossel-tecnologias">
+    <div class="icones-carousel" id="carousel">
+      <div class="icone"><img src="../imagens/tec/php.png" alt="PHP"></div>
+      <div class="icone"><img src="../imagens/tec/web3.png" alt="Web3"></div>
+      <div class="icone"><img src="../imagens/tec/react.png" alt="React"></div>
+      <div class="icone"><img src="../imagens/tec/typescript.png" alt="TypeScript"></div>
     </div>
   </div>
+  <script>
+  const carousel = document.getElementById('carousel');
+  carousel.innerHTML += carousel.innerHTML;
+</script>
 
-  <!-- RODAPE DO SITE -->
-  <footer class="rodape" id="link-rodape">
-    <div class="coluna-rodape">
-      <h3>Sobre Nós</h3>
-      <ul>
-        <li><a href="#link-somos">Quem somos</a></li>
-        <li><a href="#link-somos">Missão</a></li>
-        <li><a href="#link-somos">Visão</a></li>
-        <li><a href="#link-somos">Valores</a></li>
-      </ul>
-    </div>
-    <div class="coluna-rodape">
-      <h3>Serviços</h3>
-      <ul>
-        <li><a href="#link-cards">Site Empresarial</a></li>
-        <li><a href="#link-cards">Cardapio Online + QrCode</a></li>
-        <li><a href="#link-cards">Sistema de Estoque</a></li>
-        <li><a href="#link-cards">Portifólio Profissional</a></li>
-        <li><a href="#link-cards">Automatização de tarefas</a></li>
-      </ul>
-    </div>
+</section>
 
-    <div class="coluna-rodape">
-      <h3>Fale conosco</h3>
-      <ul>
-        <li><a href="mailto:companytwoak@gmail.com">Email: companytwoak@gmail.com</a></li>
-        <br>
-        <li><a href="https://wa.me/5511970629125?text=Olá%20Luan,%20vim%20do%20portfólio%20da%20TwoakCompany">Telefone
-            Luan: (11) 97062-9125</a></li>
-        <li><a href="https://wa.me/5511992038075?text=Olá%20Leo,%20vim%20do%20portfólio%20da%20TwoakCompany">Telefone
-            Leo: (11) 99203-8075</a></li>
-      </ul>
-    </div>
+    <!-- RODAPE DO SITE -->
+    <footer class="rodape" id="link-rodape">
+      <div class="coluna-rodape">
+        <h3>Sobre Nós</h3>
+        <ul>
+          <li><a href="#link-somos">Quem somos</a></li>
+          <li><a href="#link-somos">Missão</a></li>
+          <li><a href="#link-somos">Visão</a></li>
+          <li><a href="#link-somos">Valores</a></li>
+        </ul>
+      </div>
+      <div class="coluna-rodape">
+        <h3>Serviços</h3>
+        <ul>
+          <li><a href="../contato.html">Site Empresarial</a></li>
+          <li><a href="../contato.html">Cardapio Online + QrCode</a></li>
+          <li><a href="../contato.html">Sistema de Estoque</a></li>
+          <li><a href="../contato.html">Portifólio Profissional</a></li>
+          <li><a href="../contato.html">Automatização de tarefas</a></li>
+        </ul>
+      </div>
 
-    <div class="coluna-rodape">
-      <h3>Redes Sociais</h3>
-      <ul>
-        <li><a href="https://www.instagram.com/twoakdevs?igsh=dzcwemg1YmhjNTVk">Instagram</a></li>
-        <li><a href="https://www.tiktok.com/@twoakdevs?_t=ZM-8xXFHKoJp6m&_r=1">TikTok</a></li>
-      </ul>
-    </div>
-  </footer>
+      <div class="coluna-rodape">
+        <h3>Fale conosco</h3>
+        <ul>
+          <li>
+            <a href="mailto:companytwoak@gmail.com"
+              >Email: companytwoak@gmail.com</a
+            >
+          </li>
+          <br />
+          <li>
+            <a
+              href="https://wa.me/5511970629125?text=Olá%20Luan,%20vim%20do%20portfólio%20da%20TwoakCompany"
+              >Telefone Luan: (11) 97062-9125</a
+            >
+          </li>
+          <li>
+            <a
+              href="https://wa.me/5511992038075?text=Olá%20Leo,%20vim%20do%20portfólio%20da%20TwoakCompany"
+              >Telefone Leo: (11) 99203-8075</a
+            >
+          </li>
+        </ul>
+      </div>
 
-  <script src="script.js"></script>
-</body>
+      <div class="coluna-rodape">
+        <h3>Redes Sociais</h3>
+        <ul>
+          <li>
+            <a href="https://www.instagram.com/twoakdevs?igsh=dzcwemg1YmhjNTVk"
+              >Instagram</a
+            >
+          </li>
+          <li>
+            <a href="https://www.tiktok.com/@twoakdevs?_t=ZM-8xXFHKoJp6m&_r=1"
+              >TikTok</a
+            >
+          </li>
+        </ul>
+      </div>
+    </footer>
 
+    <script src="script.js"></script>
+  </body>
 </html>
