--- a/contato.html
+++ b/contato.html
@@ -32,8 +32,8 @@
       </div>
 
       <nav class="funcionalidades">
-        <a href="../index.html #link-somos">Inicio</a>
-        <a href="../index.html #integrantes">Integrantes</a>
+        <a href="index.html">Inicio</a>
+        <a href="index.html">Integrantes</a>
         <a id="entrar-contato" href="../contato.html">Entre em contato</a>
       </nav>
     </header>
@@ -77,6 +77,11 @@
     <div class="input-group full-width">
       <label for="cargo">Cargo<span class="required">*</span></label>
       <input type="text" id="cargo" name="cargo" required />
+    </div>
+
+    <div class="input-group full-width">
+      <label for="assunto">Assunto<span class="required">*</span></label>
+      <input type="text" id="assunto" name="assunto" required />
     </div>
 
     <button type="submit" class="btn-submit">Enviar</button>
@@ -144,8 +149,8 @@
           </li>
         </ul>
       </div>
+       <p>&copy; 2025 Twoak Company. Todos os direitos reservados.</p>
     </footer>
-
 <script src="contato.js"></script>
   </body>
 </html>
