--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@
           </li>
         </ul>
       </div>
+       <p>&copy; 2025 Twoak Company. Todos os direitos reservados.</p>
     </footer>
   </body>
 </html>
