--- a/portifolio/portifolioLeo.html
+++ b/portifolio/portifolioLeo.html
@@ -20,8 +20,8 @@
       </div>
 
       <nav class="funcionalidades">
-        <a href="../index.html #link-somos">Inicio</a>
-        <a href="../index.html #integrantes">Integrantes</a>
+        <a href="../index.html">Inicio</a>
+        <a href="../index.html">Integrantes</a>
         <a id="entrar-contato" href="../contato.html">Entre em contato</a>
       </nav>
     </header>
@@ -30,7 +30,7 @@
     <section class="divPortifolio" id="link-divPortifolio">
       <img src="../imagens/leoIcon.png" id="iconPortifolio" />
       <div>
-        <h1>Leonardo Machado arroyo</h1>
+        <h1>Leonardo Machado Arroyo</h1>
         <h3>Integrante Full-Stack</h3>
         <p>
           Sou um estudante de 17 anos do curso Técnico em Análise e
@@ -137,6 +137,7 @@
           </li>
         </ul>
       </div>
+       <p>&copy; 2025 Twoak Company. Todos os direitos reservados.</p>
     </footer>
 
     <script src="script.js"></script>
