--- a/portifolio/portifolioluan.html
+++ b/portifolio/portifolioluan.html
@@ -19,8 +19,8 @@
       </div>
       
       <nav class="funcionalidades">
-        <a href="../index.html #link-somos">Inicio</a>
-        <a href="../index.html #integrantes">Integrantes</a>
+        <a href="../index.html">Inicio</a>
+        <a href="../index.html">Integrantes</a>
         <a id="entrar-contato" href="../contato.html">Entre em contato</a>
       </nav>
     </header>
@@ -138,6 +138,7 @@
           </li>
         </ul>
       </div>
+       <p>&copy; 2025 Twoak Company. Todos os direitos reservados.</p>
     </footer>
 
     <script src="script.js"></script>
